# streaming_service

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  prometheus.yml  pyproject.toml
scripts/: locustfile.py
src/streaming_service/: main.py
src/streaming_service/application/: exceptions.py
src/streaming_service/application/factories/: __init__.py  film.py  user.py
src/streaming_service/application/handlers/auth/: __init__.py  login.py  logout.py  sign_up.py
src/streaming_service/application/handlers/film/: __init__.py  create.py  delete.py  get.py  get_all.py
src/streaming_service/application/handlers/genre/: __init__.py  create.py  get_all.py
src/streaming_service/application/ports/: __init__.py  auth_payload.py  id_generator.py  publisher.py  request_manager.py  transaction_manager.py  verifier.py
src/streaming_service/application/ports/repositories/: __init__.py  film.py  genre.py  user.py
src/streaming_service/bootstrap/: config.py  logging.py
src/streaming_service/bootstrap/ioc/: __init__.py  application.py  context.py  database.py  infrastructure.py  presentation.py
src/streaming_service/controllers/amqp/: __init__.py  index.py
src/streaming_service/controllers/http/: __init__.py  exception_handler.py
src/streaming_service/controllers/http/adapters/: request_manager.py
src/streaming_service/controllers/http/middlewares/: __init__.py  auth.py  metrics.py
src/streaming_service/controllers/http/routes/: __init__.py  auth.py  film.py  genre.py  healthcheck.py  index.py
src/streaming_service/controllers/middlewares/: __init__.py  metrics.py
src/streaming_service/controllers/prometheus/: metrics.py
src/streaming_service/entities/: common.py  film.py  genre.py  user.py
src/streaming_service/infrastructure/adapters/: __init__.py  auth_payload.py  hasher.py  id_generator.py  verifier.py
src/streaming_service/infrastructure/broker/: __init__.py  broker_provider.py  publisher.py
src/streaming_service/infrastructure/persistence/adapters/: __init__.py  film.py  genre.py  user.py
src/streaming_service/infrastructure/persistence/migrations/: env.py
src/streaming_service/infrastructure/persistence/migrations/versions/: 3b87b77fda9e_added_user_table.py  7b0ab520dfed_added_genre_and_film_tables.py  b7a65febc9b3_added_genre_and_film_tables.py
src/streaming_service/infrastructure/persistence/tables/: __init__.py  film.py  genre.py  user.py
tests/unit/: conftest.py
tests/unit/application/: test_factories.py
tests/unit/application/handlers/: test_auth.py  test_film.py
