[project]
name = "fastpi-new-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "faststream[rabbit]>=0.6.5",
    "orjson>=3.11.5",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.45",
    "uuid7>=0.1.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.14.11",
]
